welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:21: error: ';' expected but 'while' found.
} while (!estFaceMur);
  ^