welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite();
droite();
{
	if(estSurBiscuit()){
		prendBiscuit();
		gauche();
		gauche();
		while(!estSurBiscuit()){
			avance();
		}
		recule();
		poseBiscuit();
		droite();
		droite();
		avance();
	}
	
	else{
		avance();
	}
} while (!estFaceMur);

